Sun Dec 30 13:41:34 EET 2001  Pekka Riikonen <priikone@silcnet.org>

	* Removed the command destructor entirely from the server's
	  command and command reply routines.  It is not needed, and
	  its usage was buggy and caused crashes.  Affected files are
	  silcd/command[_reply].[ch].

Fri Dec 28 12:43:22 EET 2001  Pekka Riikonen <priikone@silcnet.org>

	* Cancel protocol and NULL sock->protocol if timeout
	  occurred during protocol.  Affected file silcd/server.c.

	* Cancel protocol timeouts always before calling the final
	  callback, to assure that after final callback is called
	  no other state will be called for the protocol anymore.
	  Affected file silcd/protocol.c.

	* Print error log if incoming connection configuration could
	  not be found.  Affected file silcd/server.c.

	* Fixed JOIN command to correctly save the founder mode
	  to the client on normal SILC server, when the channel
	  was created by the router.  Affected file silcd/command.c.

	* Fixed LIST command (hopefully) to send correct reply
	  packets.  Affected file silcd/command.c.

Thu Dec 20 16:14:52 CET 2001  Pekka Riikonen <priikone@silcnet.org>

	* The silc_packet_receive_process now returns FALSE if the
	  read data was invalid packet, and TRUE if it was ok.

	  The server now checks that if unauthenticated connection
	  sends data and its processing fails the server will close
	  the connection since it could be a malicious flooder. 

	  Affected files lib/silccore/silcpacket.[ch], silcd/server.c.

Wed Dec 19 21:31:25 EET 2001  Pekka Riikonen <priikone@silcnet.org>

	* Make sure the warning about error opening a log file is
	  printed only once and not everytime it fails (produces
	  too much useless log).  Affected file lib/silcutil/silclog.c.

Wed Dec 19 18:21:51 CET 2001  Johnny Mnemonic <johnny@themnemonic.org>
 
 	* Made the silc_server_daemonise() function more readable.
 	  Affected file silcd/server.c.
 
 	* Pid file is now optional, the user may comment it out from