@@ -1263,7 +1263,7 @@ void silc_server_send_notify_signoff(SilcServer server,
 				     SilcSocketConnection sock,
 				     bool broadcast,
 				     SilcClientID *client_id,
-				     char *message)
+				     const char *message)
 {
   SilcBuffer idp;
 
