@@ -140,9 +140,10 @@ void silc_server_free_client_data(SilcServer server,
 				  SilcSocketConnection sock,
 				  SilcClientEntry client, 
 				  int notify,
-				  char *signoff);
+				  const char *signoff);
 void silc_server_free_sock_user_data(SilcServer server, 
-				     SilcSocketConnection sock);
+				     SilcSocketConnection sock,
+				     const char *signoff_message);
 void silc_server_remove_from_channels(SilcServer server, 
 				      SilcSocketConnection sock,
 				      SilcClientEntry client,
