@@ -1,3 +1,9 @@
+Wed Jan  2 18:56:21 EET 2002  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed silc_string_regexify list creation.  Fixes bugs with
+	  BAN and INVITE commands in server.  The affected file is
+	  lib/silcutil/unix/silcunixutil.c.
+
 Sun Dec 30 13:41:34 EET 2001  Pekka Riikonen <priikone@silcnet.org>
 
 	* Removed the command destructor entirely from the server's
